<?xml version="1.0" encoding="utf-8"?>
<!-- Menu del NavigationView (drawer): come la bottom nav, più la voce Promemoria -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_vector"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add"/>
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_overview"
        android:title="@string/title_overview"/>
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
